---------------------------------------------------------------------------------------------------
Version: 0.69.45
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.44
Date: 2025-05-31
  Changes:
    - Trashsteroid scale inverting settings can now be changed without rebooting the game. So much more convenient!
    - Module icons for biorecycler no longer obscure other machines. Thanks, Bilka.
    - Difficulty options have been implemented, but not yet available. You will be able to change difficulty once I can properly balance the actual difficulty.
    - New achievements, but I'm still working on being able to even test it properly.
    - Maraxsis can now make research vessels with Rubia science.
    - Forgot to credit Hornwitser, who made the quality glassware from which science sprites are derived. Licenses also updated.
---------------------------------------------------------------------------------------------------
Version: 0.69.43
Date: 2025-05-29
  Changes:
    - Fixed horrible crash from chunk checker in the new update. Sorry!
---------------------------------------------------------------------------------------------------
Version: 0.69.42
Date: 2025-05-29
  Changes:
    - Further optimization to trashsteroid rendering. Lower Rubia time usage.
    - Added a setting to invert how trashsteroids become bigger/smaller as they approach the surface.
---------------------------------------------------------------------------------------------------
Version: 0.69.41
Date: 2025-05-29
  Changes:
    - Sniper turret technology icon size did not match. Some users could not load the game.
---------------------------------------------------------------------------------------------------
Version: 0.69.40
Date: 2025-05-28
  Changes:
    - Garbo grabber recipe description updated.