@@ -11,3 +11,9 @@ if mods["RocketCargoInsertion"] then
     data.raw["string-setting"]["rci-mode"].allowed_values = {"proxy"}
     data.raw["string-setting"]["rci-mode"].default_value = "proxy"
 end
+
+
+--For blueprint shotgun, need to hide the no-wood mode, since we are always going to change to no wood
+if mods["blueprint-shotgun"] then
+    data.raw["bool-setting"]["blueprint-shotgun-no-wood"].hidden = true
+end
