@@ -2,6 +2,7 @@
 Version: 0.69.45
 Date: ????
   Changes:
+    - Compatibility for blueprint shotgun.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.44
 Date: 2025-05-31
